[package]
name = "py_trezor_orchard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]

[dependencies]
nonempty = "*"
libc = "*"
ff = "*"
rand = "*"
rand_core = "*"
rand_chacha = "*"
pyo3 = { version = "*", features = ["extension-module"] }
orchard = "*"
pasta_curves = "*"
zcash_primitives = "0.9.1"
subtle = "*"
incrementalmerkletree = "*"
trezor_orchard = { path = "/home/agi/gh/jarys/trezor_orchard"}


[patch.crates-io.orchard]
path = "/home/agi/gh/jarys/orchard"
